<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white_ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/positive_and_negative" />

        <View
            android:background="@color/color_gray_cccccc"
            android:layout_width="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:layout_height="0.5dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.onlybeyond.numbertextview.NumberTextView
                android:id="@+id/ntv_test_one"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp" />

            <TextView
                android:id="@+id/btn_test_one"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginRight="30dp"
                android:background="@color/color_blue_0085f5"
                android:gravity="center"
                android:text="@string/anim_again"
                android:textColor="@color/color_white_ffffff"
                android:textSize="13sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.onlybeyond.numbertextview.NumberTextView
                android:id="@+id/ntv_test_two"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp" />

            <TextView
                android:id="@+id/btn_test_two"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginRight="30dp"
                android:background="@color/color_blue_0085f5"
                android:gravity="center"
                android:text="@string/anim_again"
                android:textColor="@color/color_white_ffffff"
                android:textSize="13sp" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/n_roll_int" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/color_gray_cccccc" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_test_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:text="@string/three_roll_int" />

            <com.onlybeyond.numbertextview.NumberTextView
                android:id="@+id/ntv_test_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@id/tv_test_three" />

            <TextView
                android:id="@+id/btn_test_three"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginRight="30dp"
                android:background="@color/color_blue_0085f5"
                android:gravity="center"
                android:text="@string/anim_again"
                android:textColor="@color/color_white_ffffff"
                android:textSize="13sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_test_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:text="@string/the_last_roll" />

            <com.onlybeyond.numbertextview.NumberTextView
                android:id="@+id/ntv_test_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"

                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@id/tv_test_four" />

            <TextView
                android:id="@+id/btn_test_four"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginRight="30dp"
                android:background="@color/color_blue_0085f5"
                android:gravity="center"
                android:text="@string/anim_again"
                android:textColor="@color/color_white_ffffff"
                android:textSize="13sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_test_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:text="@string/second_last_roll" />

            <com.onlybeyond.numbertextview.NumberTextView
                android:id="@+id/ntv_test_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"

                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@id/tv_test_five" />

            <TextView
                android:id="@+id/btn_test_five"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginRight="30dp"
                android:background="@color/color_blue_0085f5"
                android:gravity="center"
                android:text="@string/anim_again"
                android:textColor="@color/color_white_ffffff"
                android:textSize="13sp" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/other" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/color_gray_cccccc" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_test_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:text="@string/the_start" />

            <com.onlybeyond.numbertextview.NumberTextView
                android:id="@+id/ntv_test_six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"

                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@id/tv_test_six" />

            <TextView
                android:id="@+id/btn_test_six"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginRight="30dp"
                android:background="@color/color_blue_0085f5"
                android:gravity="center"
                android:text="@string/anim_again"
                android:textColor="@color/color_white_ffffff"
                android:textSize="13sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_test_seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:text="@string/the_time_duration" />

            <com.onlybeyond.numbertextview.NumberTextView
                android:id="@+id/ntv_test_seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"

                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@id/tv_test_seven" />

            <TextView
                android:id="@+id/btn_test_seven"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginRight="30dp"
                android:background="@color/color_blue_0085f5"
                android:gravity="center"
                android:text="@string/anim_again"
                android:textColor="@color/color_white_ffffff"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_test_seven_time"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/ntv_test_seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_test_eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:text="@string/symbol_and_unit" />

            <com.onlybeyond.numbertextview.NumberTextView
                android:id="@+id/ntv_test_eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@id/tv_test_eight" />

            <TextView
                android:id="@+id/btn_test_eight"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginRight="30dp"
                android:background="@color/color_blue_0085f5"
                android:gravity="center"
                android:text="@string/anim_again"
                android:textColor="@color/color_white_ffffff"
                android:textSize="13sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_test_nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:text="@string/property_setting" />

            <com.onlybeyond.numbertextview.NumberTextView
                android:id="@+id/ntv_test_nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:ntvRollInt="5"
                app:ntvStartValue="10"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@id/tv_test_nine" />

            <TextView
                android:id="@+id/btn_test_nine"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginRight="30dp"
                android:background="@color/color_blue_0085f5"
                android:gravity="center"
                android:text="@string/anim_again"
                android:textColor="@color/color_white_ffffff"
                android:textSize="13sp" />


        </RelativeLayout>



    </LinearLayout>
</ScrollView>
